--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,16 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.21)
+
+option(USE_OPENMP "Use OpenMP - by default ON" ON)
+option(USE_AVX "Use AVX if available - by default ON" OFF)
 
 # -----------------------------------------------------------------------------
 # UMAPAnalysis Plugin
 # -----------------------------------------------------------------------------
 set(UMAPANALYSIS "UMAPAnalysisPlugin")
-PROJECT(${UMAPANALYSIS})
+PROJECT(${UMAPANALYSIS} 
+        VERSION 1.0.0
+        DESCRIPTION "A ManiVault plugin that wraps LTLA/umappp"
+        LANGUAGES CXX)
 
 # -----------------------------------------------------------------------------
 # CMake Options
@@ -15,10 +21,18 @@ set(CMAKE_AUTOMOC ON)
 
 if(MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /DWIN32 /EHsc /MP /permissive- /Zc:__cplusplus")
-	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:LIBCMT")
-	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
-	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:LIBCMT")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
 endif(MSVC)
+
+include(FetchContent)
+
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+include(CMakeCheckSetAVX)
+
+#include(CPM)
+#include(CMakeCPMDependencies)
 
 # -----------------------------------------------------------------------------
 # Set install directory
@@ -33,7 +47,16 @@ file(TO_CMAKE_PATH ${MV_INSTALL_DIR} MV_INSTALL_DIR)
 # -----------------------------------------------------------------------------
 # Dependencies
 # -----------------------------------------------------------------------------
-find_package(Qt6 COMPONENTS Widgets WebEngineWidgets REQUIRED)
+find_package(Qt6 COMPONENTS Widgets WebEngineWidgets Concurrent REQUIRED)
+find_package(OpenMP)
+
+FetchContent_Declare(
+  umappp 
+  GIT_REPOSITORY https://github.com/LTLA/umappp
+  GIT_TAG ff423214adb7aa7128833500f17b42b0fbe3d4d0 # master as of 24/05/24
+)
+
+FetchContent_MakeAvailable(umappp)
 
 # -----------------------------------------------------------------------------
 # Source files
@@ -48,7 +71,7 @@ set(UMAPANALYSIS_SOURCES
 )
 
 set(PLUGIN_MOC_HEADERS
-	src/UMAPAnalysisPlugin.h
+    src/UMAPAnalysisPlugin.h
 )
 
 source_group( Plugin FILES ${UMAPANALYSIS_SOURCES})
@@ -74,17 +97,23 @@ target_include_directories(${UMAPANALYSIS} PRIVATE "${MV_INSTALL_DIR}/$<CONFIGUR
 # Request C++17
 target_compile_features(${UMAPANALYSIS} PRIVATE cxx_std_17)
 
-# Link to Qt libraries
-target_link_libraries(${UMAPANALYSIS} PRIVATE Qt6::Widgets)
-target_link_libraries(${UMAPANALYSIS} PRIVATE Qt6::WebEngineWidgets)
+if(MSVC)
+    target_compile_options(${UMAPANALYSIS} PRIVATE /bigobj)    # for Eigen
+endif()
 
-find_package(ltla_umappp CONFIG REQUIRED)
-target_link_libraries(${UMAPANALYSIS} PRIVATE ltla::umappp)
+# Instruction sets
+check_and_set_AVX(${UMAPANALYSIS} ${USE_AVX})
 
 # -----------------------------------------------------------------------------
 # Target library linking
 # -----------------------------------------------------------------------------
-# Link to HDPS and data plugins
+target_link_libraries(${UMAPANALYSIS} PRIVATE Qt6::Widgets)
+target_link_libraries(${UMAPANALYSIS} PRIVATE Qt6::WebEngineWidgets)
+target_link_libraries(${UMAPANALYSIS} PRIVATE Qt6::Concurrent)
+
+target_link_libraries(${UMAPANALYSIS} PRIVATE ltla::umappp)
+
+# Link to ManiVault and data plugins
 # The link path in this repo assumes that the ManiVault core was built locally
 # in contrast to having been installed with an installer. In the latter case you'll have
 # to adapt the MV_LINK_PATH and PLUGIN_LINK_PATH to your install folder
@@ -98,19 +127,31 @@ set(POINTDATA_LINK_LIBRARY "${PLUGIN_LINK_PATH}/${CMAKE_SHARED_LIBRARY_PREFIX}Po
 target_link_libraries(${UMAPANALYSIS} PRIVATE "${MV_LINK_LIBRARY}")
 target_link_libraries(${UMAPANALYSIS} PRIVATE "${POINTDATA_LINK_LIBRARY}")
 
+if(USE_OPENMP AND OpenMP_CXX_FOUND)
+    message(STATUS "Link ${UMAPANALYSIS} to OpenMP")
+    if(MSVC)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /openmp:llvm")
+        message(STATUS "Using /openmp:llvm for MSVC")
+    else()
+        target_link_libraries(${UMAPANALYSIS} PRIVATE OpenMP::OpenMP_CXX)
+    endif()
+        
+endif()
+
 # -----------------------------------------------------------------------------
 # Target installation
 # -----------------------------------------------------------------------------
 # Install the shared plugin libary to the "Plugins" folder in the ManiVault install directory
 install(TARGETS ${UMAPANALYSIS}
-    RUNTIME DESTINATION Plugins COMPONENT PLUGINS # Windows .dll
-    LIBRARY DESTINATION Plugins COMPONENT PLUGINS # Linux/Mac .so
+    RUNTIME DESTINATION Plugins COMPONENT PLUGIN # Windows .dll
+    LIBRARY DESTINATION Plugins COMPONENT PLUGIN # Linux/Mac .so
 )
 
 add_custom_command(TARGET ${UMAPANALYSIS} POST_BUILD
     COMMAND "${CMAKE_COMMAND}"
         --install ${CMAKE_CURRENT_BINARY_DIR}
         --config $<CONFIGURATION>
+        --component PLUGIN
         --prefix ${MV_INSTALL_DIR}/$<CONFIGURATION>
 )
 
