--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,6 @@ on:
   push:
   pull_request:
   workflow_dispatch:
-    inputs:
-      forceMacBuild:
-        description: 'If set true override the ENABLE_MACOS_BUILD to force a build'
-        type: boolean
-        default: false
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -87,24 +82,9 @@ jobs:
           conan-pem: ${{secrets.LKEB_UPLOAD_CERT_CHAIN}}
           rs_ssh_key: ${{ secrets.RULESSUPPORT_DEPLOY_KEY }}
 
-      - name: Linux build
-        if: startsWith(matrix.os, 'ubuntu')
-        uses: ManiVaultStudio/github-actions/conan_linuxmac_build@main
-        with:
-          conan-compiler: ${{matrix.build-compiler}}
-          conan-compiler-version: ${{matrix.build-cversion}}
-          conan-libcxx-version: ${{matrix.build-libcxx}}
-          conan-build-type: ${{matrix.build-config}}
-          conan-build-os: ${{matrix.build-os}}
-          conan-user: ${{secrets.LKEB_UPLOAD_USER}}
-          conan-password: ${{secrets.LKEB_UPLOAD_USER_PASSWORD}}
-          conan-pem: ${{secrets.LKEB_UPLOAD_CERT_CHAIN}}
-          conan-cc: gcc-${{matrix.build-cversion}}
-          conan-cxx: g++-${{matrix.build-cversion}}
-
-      - name: Mac build
-        if: startsWith(matrix.os, 'macos') &&  (env.MACENABLED == 'true' || vars.ENABLE_MACOS_BUILD == 'True')
-        uses: ManiVaultStudio/github-actions/conan_linuxmac_build@main
+      - name: Linux Mac build
+        if: "!startsWith(runner.os, 'Windows')"
+        uses: hdps/github-actions/conan_linuxmac_build@main
         with:
           conan-compiler: ${{matrix.build-compiler}}
           conan-compiler-version: ${{matrix.build-cversion}}
