--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,27 +25,21 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
 endif()
 
-include(FetchContent)
+set(MV_UMAP_CMAKE_MODULES_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+set(CMAKE_MODULE_PATH ${MV_UMAP_CMAKE_MODULES_PATH})
 
-# Find the patch program.
-find_program(PATCH_EXECUTABLE patch)
-if(CMAKE_HOST_WIN32 AND NOT PATCH_EXECUTABLE)
-    # The Windows git executable is distributed with patch.exe. Find the path to the executable, if
-    # it exists, then search `../usr/bin` and `../../usr/bin` for patch.exe.
-    find_package(Git QUIET)
-    if(GIT_EXECUTABLE)
-        get_filename_component(extra_search_path ${GIT_EXECUTABLE} DIRECTORY)
-        get_filename_component(extra_search_path_1up ${extra_search_path} DIRECTORY)
-        get_filename_component(extra_search_path_2up ${extra_search_path_1up} DIRECTORY)
-        find_program(
-        PATCH_EXECUTABLE patch HINTS "${extra_search_path_1up}/usr/bin"
-                                     "${extra_search_path_2up}/usr/bin"
-        )
-    endif()
-endif()
-if(NOT PATCH_EXECUTABLE)
-    message(FATAL_ERROR "Couldn't find `patch` executable to use with PATCHES keyword.")
-endif()
+# CMake package manager
+include(get_cpm)
+
+# re-applying patches is problematic without CPM_SOURCE_CACHE
+# see https://github.com/cpm-cmake/CPM.cmake/issues/577
+set(CPM_SOURCE_CACHE ${CMAKE_CURRENT_BINARY_DIR}/.cpm-cache)
+
+# wrapper for cmake fetch utils
+include(CMakeFetchUtils)
+
+# cpm managed dependencies
+include(CMakeCPMDependencies)
 
 # -----------------------------------------------------------------------------
 # Dependencies
@@ -62,59 +56,34 @@ endif()
 find_package(libscran_umappp CONFIG QUIET)
 
 if(NOT libscran_umappp_FOUND AND NOT TARGET libscran::umappp)
-    # avoid several of eigens cmake config steps
-    set(BUILD_TESTING OFF CACHE BOOL "Enable testing for Eigen" FORCE)
-    set(EIGEN_BUILD_TESTING  OFF CACHE BOOL "Enable creation of Eigen tests." FORCE)
-    set(EIGEN_BUILD_DOC OFF CACHE BOOL "Enable creation of Eigen documentation" FORCE)
-    set(EIGEN_BUILD_DEMOS OFF CACHE BOOL "Toggles the building of the Eigen demos" FORCE)
 
-    FetchContent_Declare(
-      umappp 
-      GIT_REPOSITORY https://github.com/libscran/umappp
-      GIT_TAG v2.0.1
-    )
+    if(NOT eigen_SOURCE_DIR)
+        set(BUILD_TESTING OFF CACHE BOOL "Enable testing for Eigen" FORCE)
+        set(EIGEN_BUILD_TESTING  OFF CACHE BOOL "Enable creation of Eigen tests." FORCE)
+        set(EIGEN_BUILD_DOC OFF CACHE BOOL "Enable creation of Eigen documentation" FORCE)
+        set(EIGEN_BUILD_DEMOS OFF CACHE BOOL "Toggles the building of the Eigen demos" FORCE)
+        fetch_content_url(eigen "https://gitlab.com/libeigen/eigen/-/archive/3866cbfbe8622f41b4f9fa17227aaa7a8de13890/eigen-3866cbfbe8622f41b4f9fa17227aaa7a8de13890.tar.gz") # master as of 26/03/25
+    endif()
 
-    FetchContent_MakeAvailable(umappp)
-    
-    message(STATUS "getting libscran_umappp")
+    # the patches enable use to use the local dependency versions
+    fetch_cpm_repo(aarand "https://github.com/LTLA/aarand.git" 4e41649bd3b7f86a59d6cef2ddf02fa615111429) # master as of 04-12-24, v1.0.2+
+    fetch_cpm_repo(subpar "https://github.com/LTLA/subpar.git" 561e0314c03476517f9ffe42f7282505a220523a) # master as of 04-12-24, v0.3.1+
+    fetch_cpm_repo_patch(kmeans "https://github.com/LTLA/CppKmeans.git" 56fbc963a042c44e3f9684f49b177bd86dd3b681 "kmeans.patch") # master as of 04-12-24, v3.1.1+, depends on aarand and subpar
+    fetch_cpm_repo_patch(knncolle "https://github.com/knncolle/knncolle.git" 513dc09b8a681274da83df97c3d5b353a2b61c4b "knncolle.patch") # master as of 04-12-24, v2.3.2+, depends on CppKmeans and subpar
+    fetch_cpm_repo_patch(irlba "https://github.com/LTLA/CppIrlba.git" 46281abde9047d28f02f8907a996af191d925a16 "irlba.patch") # master as of 04-12-24, v2.0.0+, depends on eigen, aarand and subpar
+    fetch_cpm_repo_patch(umappp "https://github.com/libscran/umappp.git" c48f164b4dbd02f48f2e22bdbacc69f27c4e45ab "umappp.patch") # master as of 04-12-24, v2.0.1+, depends on aarand, subpar, CppIrlba and knnolle
 endif()
 
 find_package(knncolle_knncolle_hnsw CONFIG QUIET)
 
 if(NOT knncolle_knncolle_hnsw_FOUND AND NOT TARGET knncolle::knncolle_hnsw)
-    FetchContent_Declare(
-      knncolle_hnsw
-      GIT_REPOSITORY https://github.com/knncolle/knncolle_hnsw
-      GIT_TAG v0.1.1
-    )
-
-    if(knncolle_hnsw_SOURCE_DIR)
-        set(knncolle_hnsw_patch "${CMAKE_CURRENT_SOURCE_DIR}/cmake/knncolle_hnsw.patch")
-        set(PATCH_COMMAND "${PATCH_EXECUTABLE}" -p1 < ${knncolle_hnsw_patch})
-    else()
-        set(PATCH_COMMAND "")
-    endif()
-
-    FetchContent_MakeAvailable(knncolle_hnsw)
+    fetch_cpm_repo_patch(knncolle_hnsw "https://github.com/knncolle/knncolle_hnsw.git" v0.1.1 "knncolle_hnsw.patch")
 endif()
 
 find_package(knncolle_knncolle_annoy CONFIG QUIET)
 
 if(NOT knncolle_knncolle_annoy_FOUND AND NOT TARGET knncolle::knncolle_annoy)
-    FetchContent_Declare(
-      knncolle_annoy
-      GIT_REPOSITORY https://github.com/knncolle/knncolle_annoy
-      GIT_TAG v0.1.1
-    )
-
-    if(knncolle_annoy_SOURCE_DIR)
-        set(knncolle_annoy_patch "${CMAKE_CURRENT_SOURCE_DIR}/cmake/knncolle_annoy.patch")
-        set(PATCH_COMMAND "${PATCH_EXECUTABLE}" -p1 < ${knncolle_annoy_patch})
-    else()
-        set(PATCH_COMMAND "")
-    endif()
-
-    FetchContent_MakeAvailable(knncolle_annoy)
+    fetch_cpm_repo_patch(knncolle_annoy "https://github.com/knncolle/knncolle_annoy.git" v0.1.1 "knncolle_annoy.patch")
 endif()
 
 # -----------------------------------------------------------------------------
