Parallel adding vectors with hnsw (#13)
* Add parallel matrix

* Add parallel hnsw adder

* Add parallel matrix test

* Add parallel hnsw adder test

* Add missing header

* Refactor attribution

* Add include

* File renaming

* Refactor file names

* Fine grained multithread settings

* Remove msvc omp restrictions

* Only search for omp if option is set

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,10 +52,12 @@ include(CMakeCPMDependencies)
 find_package(Qt6 COMPONENTS Widgets WebEngineWidgets Concurrent REQUIRED)
 find_package(ManiVault COMPONENTS Core PointData CONFIG QUIET)
 
-find_package(OpenMP)
+if(MV_UMAP_USE_OPENMP)
+    find_package(OpenMP)
 
-if(OpenMP_CXX_FOUND)
-    message(STATUS "Found OpenMP")
+    if(OpenMP_CXX_FOUND)
+        message(STATUS "Found OpenMP")
+    endif()
 endif()
 
 find_package(libscran_umappp CONFIG QUIET)
@@ -109,7 +111,9 @@ set(UMAPANALYSIS_SETTINGS
 )
 
 set(UMAPANALYSIS_DISTANCES
-    src/hnsw/space_corr.h
+    src/util/hnsw_space_corr.h
+    src/util/knncolle_matrix_parallel.h
+    src/util/knncolle_hnsw_parallel.h
 )
 
 set(UMAPANALYSIS_AUX
@@ -138,6 +142,9 @@ add_library(${UMAPANALYSIS} SHARED ${UMAPANALYSIS_SOURCES} ${UMAPANALYSIS_AUX})
 # -----------------------------------------------------------------------------
 # Include ManiVault headers, including system data plugins
 target_include_directories(${UMAPANALYSIS} PRIVATE "${ManiVault_INCLUDE_DIR}")
+
+# Inlcude own sources for cross-platform include consitency
+target_include_directories(${UMAPANALYSIS} PRIVATE "${${CMAKE_CURRENT_SOURCE_DIR}/src}")
 
 # -----------------------------------------------------------------------------
 # Target properties
