--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,8 @@
 version: 2
 updates:
   - package-ecosystem: "github-actions"
-    directory: "/"  # Dependabot scans the whole repo for workflow files
+    directory: ".github/"
     schedule:
       interval: "weekly"
     allow:
-      - dependency-type: "all"
+      - dependency-type: "production"
